# escrocs

./: .gitignore  README.md
ArUco/: ArUcos_2022.docx  aruco_girouette.py
CAD/mechanical/: gears.txt  robot_triangle.FCStd  servo_gears_info.md  support-us-LED Support Pentagon.amf  support-us-Support PCB Pentagon.amf  support-us-Toit.amf  support-us-US Ring Pentagon.amf  support-us.FCStd
RF_submodule/arduino/: arduino.ino  radio.cpp  radio.h  radio_common.h
RF_submodule/common/: radio_common.h
RF_submodule/raspberry/: main.c  radio_emitter.c  radio_emitter.h
arduino/: arduino.ino  motor.h  motor.ino
arduino/Actuators/: Servo_drapeau.ino
arduino/Sensors/: HCSR04_module.ino
board_config/atmega168p/: disable_reset.sh  optiboot_atmega168.hex  write_bootloader.sh
board_config/atmega328p/: set_fuse_for_external_clock.sh
code/lidar/desktop/ecal_wrapper/: CMakeLists.txt  CMakeSettings.json  main.cpp
emergency_omnibot/: emergency_omnibot.ino  encoder.cpp  motor.cpp  motor.h  motor_secondary_board.ino  omni_trajectory_control.cpp  omni_trajectory_control.h
misc/: print_lidar_sse.py  print_lidar_uart.py  print_lidar_ws.py
misc/HMI/: HMI  (+1 more)
motor_secondary_board/: encoder.h  motor.cpp  motor_secondary_board.ino
omnibot/: omni_trajectory_control.cpp  omni_trajectory_control.h  omnibot.ino  pinout.h  tri_ultrasound.cpp  tri_ultrasound.h
robot/: flag_pole.cpp  flag_pole.h  motor.cpp  motor.h  pinout.h  robot.ino  servo_resources.h  servos.cpp  servos.h  trajectory_control.cpp  trajectory_control.h  ultrasound.cpp  ultrasound.h
submodules/: pinout.h
(+983 files in other folders)
